objects/pkgviz__Package_Visualizer_Resource__mdt.object
<CustomObject>
    <fields>
        <fullName>pkgviz__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pkgviz__Icon__c</fullName>
        <label>Icon</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>doctype:unknown</fullName>
                </value>
                <value>
                    <fullName>doctype:pdf</fullName>
                </value>
                <value>
                    <fullName>standard:trailhead</fullName>
                </value>
                <value>
                    <fullName>standard:quip</fullName>
                </value>
                <value>
                    <fullName>standard:link</fullName>
                </value>
                <value>
                    <fullName>doctype:video</fullName>
                </value>
                <value>
                    <fullName>standard:partners</fullName>
                </value>
                <value>
                    <fullName>standard:knowledge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pkgviz__Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pkgviz__Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visibility</label>
        <type>Checkbox</type>
    </fields>
    <label>Package Visualizer Resource</label>
    <pluralLabel>Package Visualizer Resources</pluralLabel>
</CustomObject>